snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-sources.jar.sha1
e8bd6ca651e621400f85f6b0bc46fd9b22c01d23